ReatcjsApp_3tier/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vignan-school
  labels:
    app: vignan-school
